2A/05_Projet_GL/src/test/deca/context/valid/complet/85_multi_select.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    int x ;

}

class B extends A {
    A a ;
    A getA() {
        return a ; 
    }
}

{
    B b ;

    int i = b.getA().x ; 
}
